@@ -1633,14 +1633,8 @@ else
         ;;
 
       # Linux/powerpc64 with 32-bit ABI
-      linux*--powerpc) # TODO
-        XCFLAGS="$XCFLAGS -DNO_ASM -DNO_ARI_ASM -DNO_SP_ASM"
-        XCFLAGS="$XCFLAGS -DNO_FAST_DISPATCH"
-        XCFLAGS="$XCFLAGS -DNO_FAST_FLOAT -DNO_FAST_DOUBLE"
-        XCFLAGS="$XCFLAGS -DNO_ALLOCA"
-        XCFLAGS="$XCFLAGS -DNO_ADDRESS_SPACE_ASSUMPTIONS"
-        XCFLAGS="$XCFLAGS -DNO_GENERATIONAL_GC"
-        XCFLAGS="$XCFLAGS -DNO_SYMBOLFLAGS"
+      linux*--powerpc)
+        XCFLAGS="$XCFLAGS -DNO_ASM"
         ;;
 
       # Linux/s390x with 32-bit ABI
